# yolov10_ros

./: README.md
yolov10_ros/: CMakeLists.txt  package.xml
yolov10_ros/launch/: yolo_v10.launch
yolov10_ros/scripts/: yolo_v10.py
yolov10_ros_msgs/: CMakeLists.txt  package.xml
yolov10_ros_msgs/msg/: PersonMarkerData.msg
